--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="mainDiv">
 
       <div class="photoDiv">
-          fgdfgfdg
+          fgdfgfdgghfgh
       </div>
     
       <div class="titleDiv">
@@ -13,7 +13,8 @@
       <div class="menuDiv">
           <button class="b1 btn-danger">About Me</button>
           <button class="b2 btn-danger">Education</button>
-          <button class="b3 btn-danger">Carieer</button>
+          <button class="b3 btn-danger">Courier</button>
+          <button class="b4 btn-danger">Projects</button>
       </div>
     
       <div class="contentDiv">
