--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
   <div class="mainDiv">
 
       <div class="photoDiv">
-          fgdfgfdgghfgh
+          
       </div>
     
       <div class="titleDiv">
-          dfgdfg
+          {{currentDateTime}}
       </div>
     
       <div class="menuDiv">
@@ -18,7 +18,7 @@
       </div>
     
       <div class="contentDiv">
-          sdgdfg
+         
       </div>
 
   </div>
