--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,12 @@
       </div>
     
       <div class="titleDiv">
-          {{currentDateTime}}
+          <div class="titleDiv-1">Welcome</div>
+          <div class="titleDiv-2"> 
+              <div class="titleDiv-2-1"> Today is {{currentWeekDay}}, {{currentMonth}}-{{currentDay}}, {{currentYear}} </div>
+              <div class="titleDiv-2-2"></div>
+          </div>
+        
       </div>
     
       <div class="menuDiv">
