--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,10 @@
       </div>
     
       <div class="menuDiv">
-          <button class="b1 btn-danger">About Me</button>
-          <button class="b2 btn-danger">Education</button>
-          <button class="b3 btn-danger">Courier</button>
-          <button class="b4 btn-danger">Projects</button>
+          <button class="b1 btn-success">About Me</button>
+          <button class="b2 btn-success">Education</button>
+          <button class="b3 btn-success">Courier</button>
+          <button class="b4 btn-success">Projects</button>
       </div>
     
       <div class="contentDiv">
