--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,10 +26,40 @@
 }
 
 .titleDiv{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
     grid-row: 1;
     grid-column: 2;
-    background: rgb(63, 156, 60);
+    background: rgb(13, 75, 37);
     
+}
+
+.titleDiv-1{
+    grid-row: 1;
+    color:rgb(241, 252, 241);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: x-large;
+    text-align: center;
+
+}
+
+.titleDiv-2{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-row: 2;
+    background-color: rgba(39, 129, 3, 0.904);
+}
+
+.titleDiv-2-1{
+    grid-column: 1;
+    color: wheat;
+    font-weight: bold;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.titleDiv-2-2{
+    grid-column: 2;
 }
 
 .menuDiv{
