--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,13 @@
       </div>
     
       <div class="titleDiv">
-       
-      </div>
+        <div class="titleDiv-1">Welcome</div>
+        <div class="titleDiv-2"> 
+            <div class="titleDiv-2-1"> Today is {{currentWeekDay}}, {{currentMonth}}-{{currentDay}}, {{currentYear}} </div>
+            <div class="titleDiv-2-2"></div>
+        </div>
+      
+    </div>
     
       <div class="menuDiv">
           <button class="b1 btn-success">About Me</button>
