Added Farenhite Temperature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <div class="titleDiv-1">Welcome</div>
         <div class="titleDiv-2"> 
             <div class="titleDiv-2-1"> Today is {{currentWeekDay}}, {{currentMonth}}-{{currentDay}}, {{currentYear}} </div>
-            <div class="titleDiv-2-2"></div>
+            <div class="titleDiv-2-2">Current Temp: {{currentTemp}} F</div>
         </div>
       
     </div>
