added styling for Temperature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,24 @@
   <div class="mainDiv">
 
       <div class="photoDiv">
-        
+          <div class="photoDiv_1">
+                <img class="portrait" src="../assets/kamparsen.jpg" alt="Italian Trulli">
+          </div>
+            
       </div>
     
       <div class="titleDiv">
-        <div class="titleDiv-1">Welcome</div>
+        <div class="titleDiv-1"><p>Welcome</p></div>
         <div class="titleDiv-2"> 
-            <div class="titleDiv-2-1"> Today is {{currentWeekDay}}, {{currentMonth}}-{{currentDay}}, {{currentYear}} </div>
-            <div class="titleDiv-2-2">Current Temp: {{currentTemp}} F</div>
+            <div class="titleDiv-2-1"> 
+                <p>Today is {{currentWeekDay}}, {{currentMonth}}-{{currentDay}}, {{currentYear}}</p>
+                <p>Orlando Time: {{currentTime}}</p>
+            </div>
+            <div class="titleDiv-2-2">
+                <p>Orlando Florida</p>
+                <p>Temp: {{currentTemp}} F</p>
+                 
+            </div>
         </div>
       
     </div>
