--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,12 +18,26 @@
    
 }
 
+.portrait {
+    height: 200px;
+    width: 200px;
+}
+
 .photoDiv{
+    display: grid;
+    grid-template-rows:  minmax(min-content, 3fr) 1fr;
     grid-row: 1;
     grid-column: 1;
     background: rgb(16, 107, 56);
 
 }
+
+.photoDiv_1{
+    grid-row: 1;
+   
+
+}
+
 
 .titleDiv{
     display: grid;
@@ -40,6 +54,7 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: x-large;
     text-align: center;
+    margin-top: 20px;  
 
 }
 
@@ -60,6 +75,9 @@
 
 .titleDiv-2-2{
     grid-column: 2;
+    color: wheat;
+    font-weight: bold;
+    margin-top: 10px;
 }
 
 .menuDiv{
