--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,14 +52,14 @@ aside{
     margin-top: 2rem;
 }
 
-.nav a{
+.nav button{
     font-size: 110%;
     color: wheat;
     margin-bottom: 1rem;
     transition:all 0.6s;
 }
 
-.nav a:hover{
+.nav button:hover{
     text-decoration: none;
     transform: scale(1.4);
 }
@@ -68,6 +68,11 @@ main{
     display: grid;
     grid-template-columns: 300px 1fr;
     grid-column-gap: 1rem;
+}
+
+.navBtn{
+    width: 100px;
+    height: 30px;
 }
 
 .main-area{
@@ -147,13 +152,16 @@ main{
 
 .experince{
     display: grid;
-    grid-template-columns: 100px 100px 100px 100px 300px 200px;
-    grid-template-rows: 80px 40px 40px 40px 700px 100px;
+    /* grid-template-columns: 100px 100px 100px 100px 300px 200px; */
+    grid-template-columns: minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(120px,1fr);
+    grid-template-rows: 80px 40px 40px 40px 100px 40px 700px 100px;
     grid-template-areas: 
     "b4 b5 b6 b7 b8 empty1"
     "companyLogo companyLogo company company company company"
     "companyLogo companyLogo title title title title"
     "companyLogo companyLogo role role role role"
+    "empty3 empty3 empty3 empty3 empty3 empty3"
+    "empty4 empty4 prevBtn nextBtn empty5 empty5"
     "empty empty main main main main"
     "footer footer footer footer footer footer";
   
@@ -183,6 +191,9 @@ main{
 
 .companyLogo{
     grid-area: companyLogo;
+    width: 60%;
+    height: auto;
+
    
    
 }
@@ -191,7 +202,8 @@ main{
     grid-area: main;
     width: 60%;
     height: auto;
-    margin-top: 8rem;
+    margin-top: 2rem;
+    border: rgb(226, 153, 17) solid 5px;
  
  }
 
@@ -226,6 +238,27 @@ main{
     margin-top: 4rem;
    
 }
+
+.nextBtn{
+    grid-area: nextBtn;
+    width: 70px;
+    height: 30px;
+    z-index: 5;
+    margin-top: 2rem;
+    margin-left: 2rem;
+    
+   
+}
+
+.prevBtn{
+    grid-area: prevBtn;
+    width: 70px;
+    height: 30px;
+    z-index: 5;
+    margin-top: 2rem;
+    margin-left: 2rem;
+}
+
 
 
 
