Added Skills to the page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,19 @@
 
-
-*{
+ *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
+  } 
 
 .container{
+   
     display: grid;
     width: 100vw;
     height: 100vh;
-  
-    background: #000428;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-   
+    
 }
+
+
 
 
 
@@ -34,9 +31,9 @@ aside{
 }
 
 .date{
-    color: wheat;
+    color: rgb(247, 243, 236);
     align-content:center;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     margin-left: 1rem;
     font-size: large;
 
@@ -71,7 +68,7 @@ aside{
 main{
     display: grid;
     grid-template-columns: 300px 1fr;
-    grid-column-gap: 1rem;
+   
 }
 
 .navBtn{
@@ -81,6 +78,10 @@ main{
 
 .main-area{
     grid-column: 2/3;
+    width: 100vw;
+    height: 100vh;
+
+    background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
 }
 
 .about{
@@ -90,9 +91,10 @@ main{
 
 }
 
-.about article{
-    margin-top: 1rem;
-
+.aboutText{
+    margin: 2rem;
+    font-weight: bold;
+    
 }
 
 .education{
@@ -102,7 +104,7 @@ main{
 
 .educationGrid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: minmax(60px,200px) minmax(60px,200px) minmax(60px,200px);
     grid-template-rows: 100px 600px 100px;
     grid-template-areas: 
     "b1 b2 b3"
@@ -126,10 +128,13 @@ main{
 
 .b{
     margin-top: 2rem;
+    height: 30px;
+   
 }
 
 .b1{
     grid-area: b1;
+    margin-left: 1rem
 }
 
 .b2{
@@ -145,8 +150,11 @@ main{
    width: 100%;
    height: auto;
    margin-top: 1rem;
+   margin-left: 2rem;
 
 }
+
+
 
 .degreeInfo{
     grid-area: ff;
@@ -157,7 +165,7 @@ main{
 .experince{
     display: grid;
     /* grid-template-columns: 100px 100px 100px 100px 300px 200px; */
-    grid-template-columns: minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(120px,1fr);
+    grid-template-columns: minmax(60px,200px) minmax(60px,200px) minmax(60px,200px) minmax(60px,200px) minmax(60px,200px) minmax(120px,200px);
     grid-template-rows: 80px 40px 40px 40px 100px 40px 700px 100px;
     grid-template-areas: 
     "b4 b5 b6 b7 b8 empty1"
@@ -175,6 +183,7 @@ main{
 
 .b4{
     grid-area: b4;
+    margin-left: 1rem;
 }
 
 .b5{
@@ -267,15 +276,15 @@ main{
 .skills{
     display: grid;
     grid-template-columns: minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(120px,1fr);
-    grid-template-rows: 80px 40px 40px 40px 100px 40px 700px 100px;
+    grid-template-rows: 60px 60px 60px 40px 100px 40px 700px 100px;
     grid-template-areas: 
     "empty b9 b10 b11 empty1 empty1"
-    "skillLogo1 skillLogo1 skillLogo1 skillLogo1 skillLogo1 skillLogo1"
-    "empty3 empty3 empty3 empty3 empty3 empty3"
-    "empty3 empty3 empty3 empty3 empty3 empty3"
-    "empty3 empty3 empty3 empty3 empty3 empty3"
-    "empty3 empty3 empty3 empty3 empty3 empty3"
-    "empty3 empty3 empty3 empty3 empty3 empty3"
+    "t1 t1 t1 t1 t1 empty4"
+    "empty6 desktopSkill1 desktopSkill2 empty2 empty2 empty2"
+    "t2 t2 t2 t2 t2 empty7"
+    "empty9 desktopSkill3 desktopSkill4 empty8 empty8 empty8"
+    "t3 t3 t3 t3 t3 empty10"
+    "empty11 desktopSkill5 desktopSkill6 empty12 empty12 empty12"
     "footer footer footer footer footer footer";
   
     grid-column-gap: 1rem;
@@ -292,6 +301,85 @@ main{
 
 .b11{
     grid-area: b11;
+}
+
+.t1{
+    grid-area: t1;
+    margin-left: 2rem;
+    margin-top: 2rem;
+}
+
+.t2{
+    grid-area: t2;
+    margin-left: 2rem;
+    margin-top: 5rem;
+}
+
+.t3{
+    grid-area: t3;
+    margin-left: 2rem;
+    margin-top: 5rem;
+}
+
+.desktopSkill1{
+    grid-area: desktopSkill1;
+    width: 30%;
+    height: auto;
+    margin-left: 5rem;
+    margin-top: 2rem;
+    border: rgb(245, 63, 18) solid 2px;
+
+}
+
+.desktopSkill2{
+    grid-area: desktopSkill2;
+    width: 30%;
+    height: auto;
+    height: 77px;
+    margin-top: 2rem;
+    margin-left: 2rem;
+    border: rgb(245, 63, 18) solid 2px;
+
+}
+
+.desktopSkill3{
+    grid-area: desktopSkill3;
+    width: 30%;
+    height: auto;
+    margin-top: 6rem;
+    margin-left: 5rem;
+    border: rgb(245, 63, 18) solid 2px;
+
+}
+
+.desktopSkill4{
+    grid-area: desktopSkill4;
+    width: 30%;
+    height: auto;
+    margin-top: 6rem;
+    margin-left: 2rem;
+    border: rgb(245, 63, 18) solid 2px;
+
+}
+
+.desktopSkill5{
+    grid-area: desktopSkill5;
+    width: 30%;
+    height: auto;
+    margin-top: 6rem;
+    margin-left: 5rem;
+    border: rgb(245, 63, 18) solid 2px;
+
+}
+
+.desktopSkill6{
+    grid-area: desktopSkill6;
+    width: 50%;
+    height: auto;
+    margin-top: 6rem;
+    margin-left: 4rem;
+    border: rgb(245, 63, 18) solid 2px;
+
 }
 
 
