added more styling

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -275,16 +275,16 @@ main{
 
 .skills{
     display: grid;
-    grid-template-columns: minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(60px,1fr) minmax(120px,1fr);
+    grid-template-columns: minmax(60px,1fr) minmax(40px,100px) minmax(40px,100px) minmax(60px,1fr) minmax(60px,1fr) minmax(120px,1fr);
     grid-template-rows: 60px 60px 60px 40px 100px 40px 700px 100px;
     grid-template-areas: 
-    "empty b9 b10 b11 empty1 empty1"
-    "t1 t1 t1 t1 t1 empty4"
-    "empty6 desktopSkill1 desktopSkill2 empty2 empty2 empty2"
-    "t2 t2 t2 t2 t2 empty7"
-    "empty9 desktopSkill3 desktopSkill4 empty8 empty8 empty8"
-    "t3 t3 t3 t3 t3 empty10"
-    "empty11 desktopSkill5 desktopSkill6 empty12 empty12 empty12"
+    "e b9 b10 b11 e1 e1"
+    "t1 t1 t1 t1 t1 e2"
+    "e3 desktopSkill1 desktopSkill2 e4 e4 e4"
+    "t2 t2 t2 t2 t2 e5"
+    "e6 desktopSkill3 desktopSkill4 e7 e7 e7"
+    "t3 t3 t3 t3 t3 e8"
+    "e9 desktopSkill5 desktopSkill6 e10 e10 e10"
     "footer footer footer footer footer footer";
   
     grid-column-gap: 1rem;
@@ -293,14 +293,50 @@ main{
 
 .b9{
     grid-area: b9;
+    transition:all 0.6s;
+}
+
+.b9:focus{
+    box-shadow: rgb(233, 224, 224);
+    
+}
+
+.b9:hover{
+    border: rgb(231, 222, 240) 4px solid;
+    transform: scale(1.4);
+
 }
 
 .b10{
     grid-area: b10;
+    transition:all 0.6s;
+}
+
+.b10:focus{
+    box-shadow: rgb(238, 234, 234);
+    
+}
+
+.b10:hover{
+    border: rgb(238, 234, 241) 4px solid;
+    transform: scale(1.4);
+
 }
 
 .b11{
     grid-area: b11;
+    transition:all 0.6s;
+}
+
+.b11:focus{
+    box-shadow: rgb(247, 245, 245);
+    
+}
+
+.b11:hover{
+    border: rgb(249, 246, 252) 4px solid;
+    transform: scale(1.4);
+
 }
 
 .t1{
@@ -323,23 +359,16 @@ main{
 
 .desktopSkill1{
     grid-area: desktopSkill1;
-    width: 30%;
     height: auto;
-    margin-left: 5rem;
     margin-top: 2rem;
-    border: rgb(245, 63, 18) solid 2px;
-
 }
 
 .desktopSkill2{
     grid-area: desktopSkill2;
-    width: 30%;
     height: auto;
     height: 77px;
     margin-top: 2rem;
-    margin-left: 2rem;
-    border: rgb(245, 63, 18) solid 2px;
-
+   
 }
 
 .desktopSkill3{
@@ -347,9 +376,6 @@ main{
     width: 30%;
     height: auto;
     margin-top: 6rem;
-    margin-left: 5rem;
-    border: rgb(245, 63, 18) solid 2px;
-
 }
 
 .desktopSkill4{
