--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,11 +111,11 @@
                             <span class="text-success">Languages:</span>
                         </h1>
                     </header>
-                    <img src="../assets/cplus.jpg" *ngIf="ShowDesktopSkills" class="desktopSkill1">
-                    <img src="../assets/csharp.jpg" *ngIf="ShowDesktopSkills" class="desktopSkill2">
+                    <h3 *ngIf="ShowDesktopSkills" class="display-5 text-uppercase text-white desktopSkill1">C++</h3>
+                    <h3 *ngIf="ShowDesktopSkills" class="display-5 text-uppercase text-white desktopSkill2">C#</h3>
 
                     <header class="t2">
-                        <h1 class="display-5 text-uppercase text-danger">Markup
+                        <h1 class="display-5 text-uppercase text-primary">Markup
                             <span class="text-success">Languages:</span>
                         </h1>
                     </header>
